--- a/algebraic_multigrid.tex
+++ b/algebraic_multigrid.tex
@@ -5,7 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Principles}
+\subsection{AMG Principles}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 As mentioned above, a common way to solve a SPD system of equations is to use a 
@@ -15,9 +15,9 @@ will compare the calculation time and the number of iterations using conjugate
 gradient preconditioned with Symmetric Gauss-Seidel (PCG-SGS) to those of CG preconditioned with an
 algebraic multigrid method. PCG-SGS was chosen because little difference was noted 
 when employing other damping factors for MIP-DSA on triangular grids \cite{wang_personal_comm}. 
-In \cite{amg_pn}, the authors 
-used an algebraic multigrid method to precondition the Krylov solver for the 
-even-parity finite element-spherical harmonics (FE-$P_N$) method. The AMG 
+An algebraic multigrid method to precondition the Krylov solver for the 
+even-parity finite element-spherical harmonics (FE-$P_N$) method; see, for instance,
+\cite{amg_pn}. \textcolor{red}{There}, the use of AMG  as a 
 preconditioner resulted in a 60\% reduction in the solution time compared to 
 ILU(0) preconditioning and even more reduction compared to SSOR preconditioning. 
 In our implementation, we have linked our code with the ML package 
@@ -37,11 +37,11 @@ and particularly algebraic multigrid methods, cannot achieve such efficiency
 Krylov subspace methods. 
 
 Before describing a general multigrid method, we recall the process using a 
-two-grid method. Assume one wants to solve the following system:
+two-grid method. Consider the following system
 \begin{equation}
   \bs{A}_f u_f = b_f,
 \end{equation}
-defined on a fine grid $\Gamma_f$. The two-grid algorithm is given by:
+defined on a fine grid $\Gamma_f$. The two-grid algorithm is as follows:
 \begin{enumerate}
   \item Perform $\nu_1$ pre-smoothing iterations using a smoother (Jacobi,
     Gauss-Seidel, or ILU) and an initial guess $u_0$: $u = S^{\nu_1}(u_0,b_f)$
