--- a/conclusions.tex
+++ b/conclusions.tex
@@ -3,22 +3,32 @@
 \section{Conclusions} \label{sec_conc}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\textcolor{red}{READ ALL}\\
 We have extended the Modified Interior Penalty (MIP) form of Diffusion Synthetic Acceleration (DSA) 
 to arbitrary polygonal grids discretized with Piece-Wise Linear Discontinuous finite elements. 
+The MIP-DSA solves employ the same discontinuous finite element trial spaces of the discrete \sn
+transport equation.
 %We proposed a simple way to compute the penalty coefficient on such grids. 
-Tests were run on meshes with various types of polygonal cells,
+%
+Numerical tests have been run on different grids with various types of polygonal cells,
+demonstrating the effectiveness of MIP as a diffusion synthetic accelerator for 
+\sn transport on arbitrary polygonal grids.
+%
 %. The advantage of is the potential 
 %reduction of the numbers of unknowns and the possibility to use adaptive mesh 
 %refinement without having hanging nodes. 
-Fourier analyses (with isotropic scattering) on rectangular cells show
-that this PWLD discretization MIP-DSA is always stable, including for high-aspect ratio cells. 
-Numerical experiments have been performed on several polygonal grids, including
-tests with different polygon types for a given grid and tests with degenerated polygons that mimic
-grids obtained in adaptive mesh refinement strategies. MIP-DSA always performed satisfactorily,
-reducing significantly the number of  Source Iterations needed for convergence. 
-We noted that the efficiency of MIP does not seem to be affected by such these meshes. 
-The MIP-DSA matrix is SPD and we compared different preconditioners for CG to solve the resulting equations. 
-Algebraic multigrid methods were found to be the best preconditioner, with AGMG being more than 20 times
-faster than CG without preconditioning.
+%
+Fourier analyses show that a PWLD discretization of MIP diffusion synthetic accelerator 
+is always stable, including for high-aspect ratio cells. 
+%
+Numerical experiments have been performed on son different grids with various types of polygonal cells, including
+grids with different polygon types for a given problem and tests with degenerate polygons that mimic
+grids obtained in adaptive mesh refinement strategies. \textcolor{red}{MIP-DSA always performed effectively,
+reducing significantly} the number of Source Iterations needed for convergence. 
+We noted that the efficiency of MIP does not seem to be affected by these meshes. 
+%
+The MIP-DSA  matrix is SPD and we solved the corresponding linear system of equations using a standard Conjugate
+Gradient method with different preconditioners. 
+Algebraic multigrid techniques were found to be the most effective preconditioner, with AGMG being more than 20 times
+faster than unpreconditioned CG.
 
